objects/ebsta1__EbstaSearchSettings__c.object
<CustomObject>
    <fields>
        <fullName>ebsta1__Email_Preview_Window_Height__c</fullName>
        <label>Email Preview Window Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebsta1__Hide_Default_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Default Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ebsta1__Hide_Mailbox_Connectors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Mailbox Connectors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ebsta1__SOQL_Limit__c</fullName>
        <description>Limits the search results returned in queries for related objects in Ebsta search.</description>
        <label>SOQL Limit</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>EbstaSearchSettings</label>
    <listViews>
        <fullName>ebsta1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>EbstaSearchSettings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EbstaSearchSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>